2006-12-08  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-network-preferences.c: (cb_add_url):
	Fix a warning about unused result from g_slist_append().

2006-08-07  Sebastien Bacher  <seb128@debian.org>

	* gnome-network-preferences.glade: 
	set "label for" and "labelled by" properties for the capplet,
	patch by Willie Walker <william.walker@sun.com> (Closes: #342121)

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* gnome-network-preferences.desktop.in.in: don't list the Application 
	category, patch by Vincent Fretin <vincent.fretin@gmail.com> 
	(Closes: #344321)

2006-01-27  Crispin Flowerday  <gnome@flowerday.cx>

	* gnome-network-preferences.glade: Use 'r' as a mnemoic rather
	than 'i' (bug #328884)

2005-07-16  Sebastien Bacher  <seb128@debian.org>

	* gnome-network-preferences.glade: fixed a mnemonic conflict (#155953).

2005-05-22  Sebastien Bacher  <seb128@debian.org>

	* gnome-network-preferences.glade: Use HIG compliant spacing 
	for the proxy dialog, patch by dennis_cranston@yahoo.com
	(Closes: #167856).

2005-05-16  Olav Vitters <olav@bkor.dhs.org>

	* gnome-network-preferences.glade:
	Make proxy settings HIG compliant. Patch by Jorn Baayen.

	Fixes bug #167856

2005-02-04  Shakti Sen  <shprasad@novell.com>

	* gnome-network-preferences.c (cb_add_url, cb_remove_url):
	Adding/Removing the host name instantly to/from gconf.

	Fixes bug #166233

2005-01-11  Sebastien Bacher  <seb128@debian.org>

	* gnome-network-preferences.c: (create_listmodel),
	(populate_listmodel), (config_treeview), (cb_add_url),
	(cb_remove_url), (cb_dialog_response), (setup_dialog):
	* gnome-network-preferences.glade:
	patch from Adriano Del Vigna <adriano.delvigna@freedows.com> to add
	a proxy exclusion list configuration (Closes: #147666).

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* gnome-network-preferences.glade:
	patch from Heikki Paajanen <hepaajan@iki.fi> (based on the patch
	from Andrew Johnson <acjgenius@earthlink.net>) 