@@ -1,3 +1,11 @@
+2007-01-06  Diego Escalante <diego@aureal.com.pe>
+
+	Fixes #317097
+
+	* gnome-network-preferences.c:
+	* gnome-network-preferences.glade: added 'Use same proxy for all
+	protocols' option.
+
 2006-12-08  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gnome-network-preferences.c: (cb_add_url):
